--- a/static/main.css
+++ b/static/main.css
@@ -166,6 +166,20 @@ body {
   color: #d4d4d8;
 }
 
+/* File links */
+.file-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.file-link:hover {
+  text-decoration: none;
+}
+
+.file-link:visited {
+  color: inherit;
+}
+
 /* Folder functionality */
 .folder-item {
   cursor: pointer;
